Rough draft module V revisions, addresses #58

--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -22,12 +22,12 @@ Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
         \vect v+\vect u\).
   \item \textbf{Addition identity.}
 
-        There exists some \(\vect 0\)
-        where \(\vect v+\vect 0=\vect v\).
+        There exists some \(\vect z\)
+        where \(\vect v+\vect z=\vect v\).
   \item \textbf{Addition inverse.}
 
         There exists some \(-\vect v\)
-        where \(\vect v+(-\vect v)=\vect 0\).
+        where \(\vect v+(-\vect v)=\vect z\).
   \item \textbf{Addition midpoint uniqueness.}
 
         There exists a unique \(\vect m\) where the distance from
