--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -90,12 +90,12 @@
         \vect v+\vect u\).
   \item \textbf{Addition identity.}
 
-        There exists some \(\vect 0\)
-        where \(\vect v+\vect 0=\vect v\).
+        There exists some \(\vect z\)
+        where \(\vect v+\vect z=\vect v\).
   \item \textbf{Addition inverse.}
 
         There exists some \(-\vect v\)
-        where \(\vect v+(-\vect v)=\vect 0\).
+        where \(\vect v+(-\vect v)=\vect z\).
   \item \textbf{Scalar multiplication associativity.}
 
         \(a(b\vect v)=(ab)\vect v\).
@@ -125,12 +125,12 @@
         \vect v\oplus\vect u\).
   \item \textbf{Addition identity.}
 
-        There exists some \(\vect 0\)
-        where \(\vect v\oplus\vect 0=\vect v\).
+        There exists some \(\vect z\)
+        where \(\vect v\oplus\vect z=\vect v\).
   \item \textbf{Addition inverse.}
 
         There exists some \(-\vect v\)
-        where \(\vect v\oplus(-\vect v)=\vect 0\).
+        where \(\vect v\oplus(-\vect v)=\vect z\).
   \item \textbf{Scalar multiplication associativity.}
 
         \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
