--- a/tex/modules/2-V/sections/2.tex
+++ b/tex/modules/2-V/sections/2.tex
@@ -3,120 +3,7 @@
 
 \begin{applicationActivities}
 
-\begin{remark}
-  The following sets are examples of vector spaces, with the usual/natural
-  operations for addition and scalar multiplication.
-  \begin{itemize}
-    \item \(\IR^n\): Euclidean vectors with \(n\) components.
-    \item \(\IR^\infty\): Sequences of real numbers \((v_1,v_2,\dots)\).
-    \item \(\IR^{m\times n}\): Matrices of real numbers with \(m\) rows and
-          \(n\) columns.
-    \item \(\IC\): Complex numbers.
-    \item \(\P^n\): Polynomials of degree \(n\) or less.
-    \item \(\P\): Polynomials of any degree.
-    \item \(C(\IR)\): Real-valued continuous functions.
-  \end{itemize}
-\end{remark}
 
-\begin{activity}{10}
-  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where
-  \((a_1,b_1)\oplus(a_2,b_2)=
-  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c\odot(a,b)=(a^c,b+c)\). Show that
-  this is not a vector space by finding a counterexample
-  that does not satisfy one of the vector space properties.
-
-  \vectorSpacePropertiesO
-\end{activity}
-
-\begin{definition}
-  A \term{linear combination} of a set of vectors
-  \(\{\vect v_1,\vect v_2,\dots,\vect v_m\}\) is given by
-  \(c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m\) for any choice of
-  scalar multiples \(c_1,c_2,\dots,c_m\).
-
-	\ \\
-	\ \\
-
-  For example, we say $\begin{bmatrix}3 \\0 \\ 5\end{bmatrix}$ is a linear combination of the vectors $\begin{bmatrix} 1 \\ -1 \\ 2 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}$ since $$\begin{bmatrix} 3 \\ 0 \\ 5 \end{bmatrix} = 2 \begin{bmatrix} 1 \\ -1 \\ 2 \end{bmatrix} + 1\begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}$$
-\end{definition}
-
-\begin{definition}
-  The \term{span} of a set of vectors is the collection of all linear
-  combinations of that set:
-  \[
-    \vspan\{\vect v_1,\vect v_2,\dots,\vect v_m\} =
-    \{c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m :
-    c_i\text{ is a real number}\}
-  \]
-\end{definition}
-
-\begin{activity}{10}
-  Consider \(\vspan\left\{\begin{bmatrix}1\\2\end{bmatrix}\right\}\).
-  \begin{subactivity}
-    Sketch
-    \(c\begin{bmatrix}1\\2\end{bmatrix}\) in the \(xy\) plane
-    for \(c=1,3,0,-2\).
-  \end{subactivity}
-  \begin{subactivity}
-    Sketch a representation of all the vectors given by
-    \(\vspan\left\{\begin{bmatrix}1\\2\end{bmatrix}\right\}\)
-    in the \(xy\) plane.
-  \end{subactivity}
-\end{activity}
-
-\begin{activity}{10}
-  Consider \(\vspan\left\{\begin{bmatrix}1\\2\end{bmatrix},
-  \begin{bmatrix}-1\\1\end{bmatrix}\right\}\).
-  \begin{subactivity}
-    Sketch the following linear combinations in the \(xy\) plane:
-    \(1\begin{bmatrix}1\\2\end{bmatrix}+
-    0\begin{bmatrix}-1\\1\end{bmatrix}\),
-    \(0\begin{bmatrix}1\\2\end{bmatrix}+
-    1\begin{bmatrix}-1\\1\end{bmatrix}\),
-    \(2\begin{bmatrix}1\\2\end{bmatrix}+
-    0\begin{bmatrix}-1\\1\end{bmatrix}\),
-    \(2\begin{bmatrix}1\\2\end{bmatrix}+
-    1\begin{bmatrix}-1\\1\end{bmatrix}\).
-  \end{subactivity}
-  \begin{subactivity}
-    Sketch a representation of all the vectors given by
-    \(\vspan\left\{\begin{bmatrix}1\\2\end{bmatrix},
-     \begin{bmatrix}-1\\1\end{bmatrix}\right\}\)
-    in the \(xy\) plane.
-  \end{subactivity}
-\end{activity}
-
-\begin{activity}{5}
-    Sketch a representation of all the vectors given by
-    \(\vspan\left\{\begin{bmatrix}6\\-4\end{bmatrix},
-     \begin{bmatrix}-2\\3\end{bmatrix}\right\}\)
-    in the \(xy\) plane.
-\end{activity}
-
-% \begin{activity}{10} % Motivate with vectors first.
-%   Consider the following linear system.
-%     \begin{alignat*}{3}
-%        x_1 &\,-\,&  x_2 &\,=\,& -1 \\
-%            &\,-\,& 3x_2 &\,=\,& -6 \\
-%      -3x_1 &\,+\,& 2x_2 &\,=\,&  1
-%     \end{alignat*}
-%   \begin{subactivity}
-%     Solve this system by using a calculator to find
-%     \[\RREF
-%       \begin{bmatrix}[cc|c]
-%         1 & -1 & -1 \\
-%         0 & -3 & -6 \\
-%         -3 & 2 & 1
-%       \end{bmatrix}
-%     \]
-%   \end{subactivity}
-%   \begin{subactivity}
-%     Given this solution, does
-%     \(\begin{bmatrix}-1\\-6\\1\end{bmatrix}\) belong to
-%     \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
-%     \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)?
-%   \end{subactivity}
-% \end{activity}
 
 \begin{activity}{15}
   The vector
@@ -131,21 +18,11 @@
   \begin{subactivity}
     Reinterpret this vector equation as a system of linear equations.
   \end{subactivity}
-    % \begin{alignat*}{3}
-    %    x_1 &\,-\,&  x_2 &\,=\,& -1 \\
-    %        &\,-\,& 3x_2 &\,=\,& -6 \\
-    %  -3x_1 &\,+\,& 2x_2 &\,=\,&  1
-    % \end{alignat*}
+
   \begin{subactivity}
     Solve this system. (Remember, you should use a calculator to help
     find \(\RREF\).)
-    % \[\RREF
-    %   \begin{bmatrix}[cc|c]
-    %     1 & -1 & -1 \\
-    %     0 & -3 & -6 \\
-    %     -3 & 2 & 1
-    %   \end{bmatrix}
-    % \]
+
   \end{subactivity}
   \begin{subactivity}
     Given this solution, does
@@ -155,5 +32,62 @@
   \end{subactivity}
 \end{activity}
 
+\begin{fact}
+  A vector \(\vect b\) belongs to
+  \(\vspan\{\vect v_1,\dots,\vect v_n\}\) if and only if
+  the linear system corresponding to
+  \([\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
+  is consistent.
+\end{fact}
+
+\begin{remark}
+  To determine if \(\vect b\) belongs to
+  \(\vspan\{\vect v_1,\dots,\vect v_n\}\), find
+  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\).
+\end{remark}
+
+\begin{activity}{10}
+  Determine if
+  \(\begin{bmatrix}3\\-2\\1 \\ 5\end{bmatrix}\) belongs to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3 \\ 2\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2 \\ 2\end{bmatrix}\right\}\)
+  by row-reducing an appropriate matrix.
+\end{activity}
+
+\begin{activity}{5}
+  Determine if
+  \(\begin{bmatrix}-1\\-9\\0\end{bmatrix}\) belongs to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
+  by row-reducing an appropriate matrix.
+\end{activity}
+
+
+\begin{observation}
+  So far we've only discussed linear combinations of Euclidean vectors.
+  Fortunately, many vector spaces of interest can be reinterpreted as an
+  \term{isomorphic} Euclidean space \(\IR^n\); that is, a Euclidean space
+  that mirrors the behavior of the vector space exactly.
+\end{observation}
+
+\begin{activity}{5}
+  We previously checked that \(\begin{bmatrix}3\\-2\\1 \\ 5\end{bmatrix}\)
+  does not belong to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3 \\ 2\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2 \\ 2\end{bmatrix}\right\}\).
+  Does \(f(x)=3x^3-2x^2+x+5\) belong to
+  \(\vspan\{x^3-3x+2,-x^3-3x^2+2+2x+2\}\)?
+\end{activity}
+
+\begin{activity}{10}
+  Does the matrix \(\begin{bmatrix}3&-2\\1&5\end{bmatrix}\) belong to
+  \(\vspan\left\{\begin{bmatrix}1&0\\-3&2\end{bmatrix},
+  \begin{bmatrix}-1&-3\\2&2\end{bmatrix}\right\}\)?
+\end{activity}
+
+\begin{activity}{5}
+  Does the complex number \(2i\) belong to
+  \(\vspan\{-3+i,6-2i\}\)?
+\end{activity}
 
 \end{applicationActivities}
