--- a/tex/modules/2-V/sections/3.tex
+++ b/tex/modules/2-V/sections/3.tex
@@ -3,65 +3,9 @@
 
 \begin{applicationActivities}
 
-\begin{fact}
-  A vector \(\vect b\) belongs to
-  \(\vspan\{\vect v_1,\dots,\vect v_n\}\) if and only if
-  the linear system corresponding to
-  \([\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
-  is consistent.
-\end{fact}
 
-\begin{remark}
-  To determine if \(\vect b\) belongs to
-  \(\vspan\{\vect v_1,\dots,\vect v_n\}\), find
-  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\).
-\end{remark}
 
 \begin{activity}{5}
-  Determine if
-  \(\begin{bmatrix}3\\-2\\1\end{bmatrix}\) belongs to
-  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
-  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
-  by row-reducing an appropriate matrix.
-\end{activity}
-
-\begin{activity}{5}
-  Determine if
-  \(\begin{bmatrix}-1\\-9\\0\end{bmatrix}\) belongs to
-  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
-  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
-  by row-reducing an appropriate matrix.
-\end{activity}
-
-
-\begin{observation}
-  So far we've only discussed linear combinations of Euclidean vectors.
-  Fortunately, many vector spaces of interest can be reinterpreted as an
-  \term{isomorphic} Euclidean space \(\IR^n\); that is, a Euclidean space
-  that mirrors the behavior of the vector space exactly.
-\end{observation}
-
-\begin{activity}{5}
-  We previously checked that \(\begin{bmatrix}3\\-2\\1\end{bmatrix}\)
-  does not belong to
-  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
-  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\).
-  Does \(f(x)=3x^2-2x+1\) belong to
-  \(\vspan\{x^2-3,-x^2-3x+2\}\)?
-\end{activity}
-
-\begin{activity}{10}
-  Does the matrix \(\begin{bmatrix}6&3\\2&-1\end{bmatrix}\) belong to
-  \(\vspan\left\{\begin{bmatrix}1&0\\0&-1\end{bmatrix},
-  \begin{bmatrix}4&3\\2&1\end{bmatrix}\right\}\)?
-\end{activity}
-
-\begin{activity}{10}
-  Does the complex number \(2i\) belong to
-  \(\vspan\{-3+i,6-2i\}\)?
-\end{activity}
-
-\begin{activity}{10}
   How many vectors are required to span \(\IR^2\)?
   Sketch a drawing in the \(xy\) plane to support your answer.
   \begin{enumerate}[(a)]
@@ -84,5 +28,78 @@
   \end{enumerate}
 \end{activity}
 
+\begin{fact}
+  At least \(n\) vectors are required to span \(\IR^n\).
+
+  \begin{center}
+  \begin{tikzpicture}[scale=0.5]
+    \draw[<->] (-4,0) -- (4,0);
+    \draw[<->] (0,-4) -- (0,4);
+    \draw[blue!50] (2,-4) -- (-2,4);
+    \draw[thick,blue,->] (0,0) -- (1,-2);
+  \end{tikzpicture}
+  \begin{tikzpicture}[x={(210:0.8cm)}, y={(0:1cm)}, z={(90:1cm)},scale=0.4]
+    \draw[->] (0,0,0) -- (6,0,0);
+    \draw[->] (0,0,0) -- (0,6,0);
+    \draw[->] (0,0,0) -- (0,0,6);
+    \draw[fill=purple!20,fill opacity=0.5]
+      (-2,-2,2) -- (6,-2,-2) -- (2,2,-2) -- (-6,2,2) -- (-2,-2,2);
+    \draw[thick,blue,->] (0,0,0) -- (1,-1,0);
+    \draw[thick,red,->] (0,0,0) -- (-2,0,1);
+  \end{tikzpicture}
+  \end{center}
+\end{fact}
+
+\begin{activity}{10}
+  Choose a vector \(\begin{bmatrix}a\\b\\c\end{bmatrix}\)
+  in \(\IR^3\) that is not in
+  \(\vspan\left\{\begin{bmatrix}1\\-1\\0\end{bmatrix},
+  \begin{bmatrix}-2\\0\\1\end{bmatrix}\right\}\) by ensuring
+  \(\begin{bmatrix}[cc|c]1&-2&a\\-1&0&b\\0&1&c\end{bmatrix}\sim
+  \begin{bmatrix}[cc|c]1&0&0\\0&1&0\\0&0&1\end{bmatrix}\).
+  (Why does this work?)
+\end{activity}
+
+\begin{fact}
+  The set \(\{\vect v_1,\dots,\vect v_m\}\) fails to span all of \(\IR^n\)
+  exactly when \(\RREF[\vect v_1\,\dots\,\vect v_m]\) has a row of zeros:
+  \[\begin{bmatrix}[cc]1&-2\\-1&0\\0&1\end{bmatrix}\sim
+  \begin{bmatrix}[cc]1&0\\0&1\\0&0\end{bmatrix}\Rightarrow
+  \begin{bmatrix}[cc|c]1&-2&a\\-1&0&b\\0&1&c\end{bmatrix}\sim
+  \begin{bmatrix}[cc|c]1&0&0\\0&1&0\\0&0&1\end{bmatrix}\]
+\end{fact}
+
+\begin{activity}{5}
+  Consider the set of vectors \(S=\left\{
+  \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+  \begin{bmatrix}1\\-4\\3\\0\end{bmatrix},
+  \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+  \begin{bmatrix}0\\3\\5\\7\end{bmatrix},
+  \begin{bmatrix}3\\13\\7\\16\end{bmatrix}
+  \right\}
+  \).
+  Does
+  \(\IR^4=\vspan S\)?
+  % \begin{subactivity}
+  % Find a linear combination of vectors in \(S\) that equals
+  % \(\begin{bmatrix}-1\\10\\7\\14\end{bmatrix}\).
+  % \end{subactivity}
+\end{activity}
+
+\begin{activity}{10}
+  Consider the set of third-degree polynomials \[S=\left\{
+  2x^3+3x^2-1,
+  2x^3+3,
+  3x^3+13x^2+7x+16,
+  -x^3+10x^2+7x+14,
+  4x^3+3x^2+2
+  \right\}
+  .\]
+  Does
+  \(\P^3=\vspan S\)?
+  % \begin{subactivity}
+  % Find a vector in \(\IR^4\) that is not in \(\vspan S\).
+  % \end{subactivity}
+\end{activity}
 
 \end{applicationActivities}
