Tweak Module E part 1 as discussed

--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -212,16 +212,16 @@
 	\end{enumerate}
     \end{multicols}
   \begin{subactivity}
-    Rank the six linear systems from hardest to solve to easiest to solve.
-  \end{subactivity}
+  	Find a solution to one of these systems.
+	\end{subactivity}
   \begin{subactivity}
-	  Determine the row operation necessary in each step to transform the hardest
-    system's augmented matrix into the easiest.
+    Rank the six linear systems from most complicated to simplest.
   \end{subactivity}
 \end{activity}
 
-\begin{observation}
-We can rewrite the previous in terms of augmented matrices
+
+\begin{activity}{5}
+We can rewrite the previous in terms of  equivalences of augmented matrices
 \[
 	\begin{alignedat}{3}
 		\begin{bmatrix}[ccc|c] -2 & 4 & -2 & -8 \\ 1 & -2 & 2 & 7 \\ 3 & -6 & 4 & 15 \end{bmatrix} & \sim &
@@ -234,10 +234,10 @@ We can rewrite the previous in terms of augmented matrices
  	\end{alignedat}
 \]
 
-The system was simplified by changing as many numbers in the matrix to
-\(0\) and \(1\) as possible. This simplest matrix equivalent to a given matrix
-is called its ``reduced row echelon form''.
-\end{observation}
+		Determine the row operation(s) necessary in each step to transform the most complicated
+    system's augmented matrix into the simplest.
+
+\end{activity}
 
 \begin{activity}{10}
 A matrix is in \term{reduced row echelon form} (\term{RREF}) if
