--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -339,4 +339,131 @@ Compute
 Since the fourth column is not a pivot column, the vectors are linearly dependent and thus not a basis.  Alternatively, since the fourth row is all zeroes, the vectors do not span $\IR^4$ and thus are not a basis.
 \end{solution}
 
+
+\begin{problem}{S3}
+Find a basis for $W$, the subspace of $\IR^4$ given by
+\[
+	W = \vspan \left\{ 
+	\begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 0 \\ 1 \\ -2 \end{bmatrix} ,
+	\begin{bmatrix} 3 \\ -6 \\ -1 \\ 2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix} ,
+	\begin{bmatrix} 2 \\ 3 \\ 0 \\ 1 \end{bmatrix}
+	\right\} .
+\]
+\end{problem}
+\begin{solution}
+Observe that 
+\[ \RREF 
+		\begin{bmatrix}
+		1 & 1 & 3 & 1 & 2 \\
+		-3 & 0 & -6 & 6 & 3 \\
+		-1 & 1 & -1 & 1 & 0 \\
+		2 & -2 & 2 & -1 & 1 
+		\end{bmatrix} = 
+		\begin{bmatrix} 
+		1 & 0 & 2 & 0 & 1 \\ 
+		0 & 1 & 1 & 0 & 0 \\
+		0 & 0 & 0 & 1 & 1 \\
+		0 & 0 & 0 & 0 & 0
+		\end{bmatrix}  
+\]
+has pivot columns in the first, second, and fourth columns, and therefore 
+\[\left\{ 
+	\begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 0 \\ 1 \\ -2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix} 
+	\right\}
+\]
+is a basis of $W$.
+\end{solution}
+
+\begin{problem}{S4}
+Find the dimension of $W$, the subspace of $\IR^4$ given by
+\[
+	W = \vspan \left\{ 
+	\begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 0 \\ 1 \\ -2 \end{bmatrix} ,
+	\begin{bmatrix} 3 \\ -6 \\ -1 \\ 2 \end{bmatrix} ,
+	\begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix} ,
+	\begin{bmatrix} 2 \\ 3 \\ 0 \\ 1 \end{bmatrix}
+	\right\} .
+\]
+\end{problem}
+\begin{solution}
+Observe that 
+\[ \RREF 
+		\begin{bmatrix}
+		1 & 1 & 3 & 1 & 2 \\
+		-3 & 0 & -6 & 6 & 3 \\
+		-1 & 1 & -1 & 1 & 0 \\
+		2 & -2 & 2 & -1 & 1 
+		\end{bmatrix} = 
+		\begin{bmatrix} 
+		1 & 0 & 2 & 0 & 1 \\ 
+		0 & 1 & 1 & 0 & 0 \\
+		0 & 0 & 0 & 1 & 1 \\
+		0 & 0 & 0 & 0 & 0
+		\end{bmatrix}  
+\]
+has three pivot columns, and therefore \(\dim W = 3\).
+\end{solution}
+
+\begin{problem}{S5}
+Determine if the polynomials \(3x^3+2x^2+x\), \(-x^3+x^2+2x+3\), \(x^2-x+1\), and \(2x^3+5x^2+x+5\)
+are linearly dependent or linearly independent.
+\end{problem}
+\begin{solution}
+Compute 
+\[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} = 
+\begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\]
+Since the fourth column is not a pivot column, the polynomials are linearly dependent.
+\end{solution}
+
+\begin{problem}{S6}
+Find a basis for the solution set of the homogeneous system of equations
+\begin{alignat}{6}
+x_1 &\,\,& x_2 &\,+\,& 3x_3 &\,+\,& x_4 &\,+\,& 2x_5 &=& 0 \\
+-3x_1 &\,\,&  &\,-\,& 6x_3 &\,+\,&6 x_4 &\,+\,& 3x_5 &=& 0 \\
+-x_1 &\,+\,& x_2 &\,-\,& x_3 &\,+\,& x_4 &\,\,&  &=& 0 \\
+2x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,-\,& x_4 &\,+\,& x_5 &=& 0 .
+\end{alignat}
+\end{problem}
+\begin{solution}
+Observe that 
+\[ \RREF 
+		\begin{bmatrix}[ccccc|c]
+		1 & 1 & 3 & 1 & 2 & 0\\
+		-3 & 0 & -6 & 6 & 3 & 0\\
+		-1 & 1 & -1 & 1 & 0 & 0\\
+		2 & -2 & 2 & -1 & 1& 0 
+		\end{bmatrix} = 
+		\begin{bmatrix}[ccccc|c]
+		1 & 0 & 2 & 0 & 1 &0\\ 
+		0 & 1 & 1 & 0 & 0 &0\\
+		0 & 0 & 0 & 1 & 1 &0\\
+		0 & 0 & 0 & 0 & 0&0
+		\end{bmatrix}  
+\]
+
+Letting $x_3=a$ and $x_5=b$ (since those correspond to the non-pivot columns), this is equivalent to the system 
+
+\begin{alignat}{6}
+x_1 &\,+\,&  &\,+\,& 2x_3 &\,+\,&  &\,\,& x_5 &=& 0 \\
+ &\,\,& x_2 &\,+\,& x_3 &\,\,& &\,\,&  &=& 0 \\
+ &\,\,&  &\,\,& x_3 &\,\,&  &\,\,&  &=& a \\
+ &\,\,&  &\,\,&  &\,\,& x_4 &\,+\,& x_5 &=& 0 \\
+ &\,\,&  &\,\,&  &\,\,&  &\,\,& x_5 &=& b \\
+\end{alignat}
+
+Thus, the solution set is 
+\[ \setBuilder{\begin{bmatrix} -2a-b \\ -a \\ a \\ -b \\ b \end{bmatrix}}{a,b \in \IR} .\]
+
+Since we can write \[\begin{bmatrix} -2a-b \\ -a \\ a \\ -b \\ b \end{bmatrix} = a \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} + b \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix}, \]
+a basis for the solution space is 
+\[ \left \{ \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix} \right\}\]
+\end{solution}
+
+
+
 \end{document}
