Fix RAT numbering

--- a/tex/modules/4-A/readiness/test.tex
+++ b/tex/modules/4-A/readiness/test.tex
@@ -1,3 +1,4 @@
+\setcounter{enumi}{30}
 \begin{readinessAssuranceTest}
 \item Which of the following is a solution to the system of linear equations
       \begin{align*}
